Use (dired-rainbow), No longer use (diredfl)
* Cask:  Depends on (dired-rainbow).
* custom.el:  Update.
* settings/setup-dired.el:  Use (dired-rainbow).  Add dired-rainbow
faces (executable-unix, media, image, svg, media-editing, plain-text,
emacs-lisp, python, js, shadow).
* themes/discreet-theme-colors.css:  Update.
* themes/discreet-theme.el:  Update faces (header-lines,
dired-directory, dired-symlink).

--- a/themes/discreet-theme-colors.css
+++ b/themes/discreet-theme-colors.css
@@ -19,8 +19,9 @@ d-yellow-3      #f0e193
 d-green-1       #60ff6c
 d-green-2       #26f9ad
 d-aquamarine-1  #7fffd4
-d-aquamarine-2  #359b79 
-d-aquamarine-3  #458b74
+d-aquamarine-2  #15bb84
+d-aquamarine-3  #359b79
+d-aquamarine-4  #458b74
 d-cyan-1        #457f8b
 d-cyan-2        #5297a5
 d-blue-1        #87cefa
