--- a/themes/discreet-theme-colors.css
+++ b/themes/discreet-theme-colors.css
@@ -1,4 +1,12 @@
 /* discreet-theme.el */
+#017a7e
+#02eaf3
+#feb259
+#59feb2
+#59a5fe
+#01676b
+
+
 
 d-black-1       #151515
 d-black-2       #161a1f
